objects/Contract_Service__c.object
<CustomObject>
    <fields>
        <fullName>Contract_Id_Service_Identifier__c</fullName>
        <description>Downstream Impact: Only used for Cloud Billing
Department Owner: Cloud Billing
Help Text: Formula to determine the contract and service to match Rolled Up Usage Data</description>
        <formula>IF(NOT(ISBLANK( Contract_Tier_Set__r.Carrier__c )), Contract_Tier_Set__r.Carrier__c + &apos;#&apos;, &apos;&apos;) + 
CASESAFEID(Contract_Tier_Set__r.Contract__r.Id) + &apos;#&apos; + IF(Service__r.Note__c = &apos;PureVoice&apos;, Service__r.PCV_Service_Identifier__c, Service__r.Identifier_Hash__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula to determine the contract and service to match Rolled Up Usage Data</inlineHelpText>
        <label>Contract Id Service Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Service_Identifier__c</fullName>
        <formula>Contract_Id_Service_Identifier__c</formula>
        <label>Contract Service Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contract_Tier_Set__c</fullName>
        <label>Contract Tier Set</label>
        <referenceTo>Contract_Tier_Set__c</referenceTo>
        <relationshipLabel>Contract Services</relationshipLabel>
        <relationshipName>Contract_Services</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Deleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Service__c</fullName>
        <label>Service</label>
        <referenceTo>Service__c</referenceTo>
        <relationshipLabel>Contract Services</relationshipLabel>
        <relationshipName>Contract_Services</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Use_Calling_Rates__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag is set for outbound calls which should use calling rates table for pricing.</description>
        <label>Use Calling Rates</label>
        <type>Checkbox</type>
    </fields>
    <label>Contract Service</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Service__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>CSN-{000000}</displayFormat>
        <label>Contract Service Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contract Services</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>